
HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.4.x
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.6x

Changes:
- Menus: Removed tip keyword #274

-----------------------------------------------------------------------
 VERSION 0.4.605
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.605

Updated:
- Dear Imgui:    Revert to Version 1.78

Fixes:
- File selector and dialog work again

-----------------------------------------------------------------------
 VERSION 0.4.602 (10/11/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.602

Updated:
- Python:        Added Python 3.6 Support
- Dear Imgui:    Upgraded to Version 1.79

Fixes:
- Windows:       on_move flag was not being used
- Popup:         mouse button keyword now works

-----------------------------------------------------------------------
 VERSION 0.4.5 (10/6/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.5

Updates:
- Stub File:      stub file is now generated automatically

Breaking Changes:
- Label Text:     changed "value" keyword to "default_value"
- Progress Bar:   changed "value" keyword to "default_value"

Fixes:
- Input Text:       Callback_data was not being sent
- Logger:           Log messages only showed up after 2nd call
- Tabs:             Fixed issue with items on tabs not lining up when using same_line
- Stub file:        add_logger added to stub file
- Plots:            reset_yticks was resetting x ticks